force-app/main/default/objects/Lead/fields/International_Careers_Week__c.field-meta.xml
<CustomField>
    <fullName>International_Careers_Week__c</fullName>
    <defaultValue>false</defaultValue>
    <label>International Careers Meet Up</label>
    <type>Checkbox</type>
</CustomField>