force-app/main/default/objects/Lead/fields/Login__c.field-meta.xml
<CustomField>
    <fullName>Login__c</fullName>
    <externalId>true</externalId>
    <label>Login</label>
    <type>Email</type>
</CustomField>