force-app/main/default/objects/Lead/fields/Motif_Archivage__c.field-meta.xml
<CustomField>
    <fullName>Motif_Archivage__c</fullName>
    <label>Motif d&apos;archivage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Doublon / Erreur</fullName>
            </value>
            <value>
                <fullName>Pas le budget</fullName>
            </value>
            <value>
                <fullName>Timing ne convient pas</fullName>
            </value>
            <value>
                <fullName>Pas soutenu pas sa hiérarchie</fullName>
            </value>
            <value>
                <fullName>Évènement complet</fullName>
            </value>
            <value>
                <fullName>Pas intéressé</fullName>
            </value>
            <value>
                <fullName>Pas école cible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>