force-app/main/default/objects/Lead/fields/Motif_d_abandon__c.field-meta.xml
<CustomField>
    <fullName>Motif_d_abandon__c</fullName>
    <description>Test EMLYON</description>
    <label>Motif d&apos;abandon</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Date légale dépassée</fullName>
            </value>
            <value>
                <fullName>Doublon</fullName>
            </value>
            <value>
                <fullName>Existe déjà</fullName>
            </value>
            <value>
                <fullName>Impossible à contacter</fullName>
            </value>
            <value>
                <fullName>Non intéressé(e)</fullName>
            </value>
            <value>
                <fullName>Obsolète</fullName>
            </value>
            <value>
                <fullName>Pas de place disponible</fullName>
            </value>
            <value>
                <fullName>Pas école cible</fullName>
            </value>
            <value>
                <fullName>Pas intéressé</fullName>
            </value>
            <value>
                <fullName>Pas soutenu par son entreprise</fullName>
            </value>
            <value>
                <fullName>Problème de financement</fullName>
            </value>
            <value>
                <fullName>Test EMLYON</fullName>
            </value>
            <value>
                <fullName>Timing ne convient pas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>