force-app/main/default/objects/Lead/fields/N_SIRET__c.field-meta.xml
<CustomField>
    <fullName>N_SIRET__c</fullName>
    <label>N° SIRET</label>
    <length>14</length>
    <type>Text</type>
</CustomField>