force-app/main/default/objects/Lead/fields/Niveau_d_exp_rience_professionnelle__c.field-meta.xml
<CustomField>
    <fullName>Niveau_d_exp_rience_professionnelle__c</fullName>
    <label>Niveau d&apos;expérience professionnelle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-2 ans</fullName>
            </value>
            <value>
                <fullName>3-5 ans</fullName>
            </value>
            <value>
                <fullName>6-10 ans</fullName>
            </value>
            <value>
                <fullName>+ de 10 ans</fullName>
            </value>
            <value>
                <fullName>11-15 ans</fullName>
            </value>
            <value>
                <fullName>16-20 ans</fullName>
            </value>
            <value>
                <fullName>21-25 ans</fullName>
            </value>
            <value>
                <fullName>+ de 25 ans</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>