force-app/main/default/objects/Lead/fields/Nom_juridique__c.field-meta.xml
<CustomField>
    <fullName>Nom_juridique__c</fullName>
    <label>Nom juridique</label>
    <length>40</length>
    <type>Text</type>
</CustomField>