force-app/main/default/objects/Lead/fields/Nombre_d_int_r_t_de_la_piste__c.field-meta.xml
<CustomField>
    <fullName>Nombre_d_int_r_t_de_la_piste__c</fullName>
    <label>Nombre d’intérêt de la piste</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>