force-app/main/default/objects/Lead/fields/Nombre_de_collaborateurs__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_collaborateurs__c</fullName>
    <label>Nombre de collaborateurs</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>