force-app/main/default/objects/Lead/fields/Participation_evenement__c.field-meta.xml
<CustomField>
    <fullName>Participation_evenement__c</fullName>
    <label>Participation événement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finance career day</fullName>
            </value>
            <value>
                <fullName>Vocation days</fullName>
            </value>
            <value>
                <fullName>Digital night</fullName>
            </value>
            <value>
                <fullName>Careers forum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>