force-app/main/default/objects/Lead/fields/Pays_de_residence__c.field-meta.xml
<CustomField>
    <fullName>Pays_de_residence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pays de résidence</label>
    <referenceTo>Pays__c</referenceTo>
    <relationshipLabel>Pistes (Pays de résidence)</relationshipLabel>
    <relationshipName>Pistes1</relationshipName>
    <type>Lookup</type>
</CustomField>