force-app/main/default/objects/Lead/fields/Point_cl__c.field-meta.xml
<CustomField>
    <fullName>Point_cl__c</fullName>
    <inlineHelpText>éléments clés à connaitre sur le prospect</inlineHelpText>
    <label>Point clé</label>
    <length>200</length>
    <type>Text</type>
</CustomField>