force-app/main/default/objects/Lead/fields/Posture__c.field-meta.xml
<CustomField>
    <fullName>Posture__c</fullName>
    <label>Posture</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Dirigeant</fullName>
            </value>
            <value>
                <fullName>Expert métier</fullName>
            </value>
            <value>
                <fullName>Middle manager</fullName>
            </value>
            <value>
                <fullName>Primo manager</fullName>
            </value>
            <value>
                <fullName>Senior manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>