force-app/main/default/objects/Lead/fields/Prescripteur__c.field-meta.xml
<CustomField>
    <fullName>Prescripteur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prescripteur</label>
    <type>Checkbox</type>
</CustomField>