force-app/main/default/objects/Lead/fields/Projet_professionnel__c.field-meta.xml
<CustomField>
    <fullName>Projet_professionnel__c</fullName>
    <label>Projet professionnel</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>