force-app/main/default/objects/Lead/fields/Provenance__c.field-meta.xml
<CustomField>
    <fullName>Provenance__c</fullName>
    <inlineHelpText>décrit le canal technique d’arrivée de la fiche piste dans le système</inlineHelpText>
    <label>Canal d&apos;acquisition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adwords</fullName>
            </value>
            <value>
                <fullName>Agent commercial</fullName>
            </value>
            <value>
                <fullName>Application mobile</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>Campus Day virtuel</fullName>
            </value>
            <value>
                <fullName>Directories/ Guides</fullName>
            </value>
            <value>
                <fullName>Display/ Banners</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Fichiers externes</fullName>
            </value>
            <value>
                <fullName>Forum/ Salon</fullName>
            </value>
            <value>
                <fullName>Import contacts</fullName>
            </value>
            <value>
                <fullName>Master class</fullName>
            </value>
            <value>
                <fullName>Module Chat</fullName>
            </value>
            <value>
                <fullName>Open class</fullName>
            </value>
            <value>
                <fullName>Prescripteurs</fullName>
            </value>
            <value>
                <fullName>Présentation aux écoles/ universités</fullName>
            </value>
            <value>
                <fullName>Présentation étudiants</fullName>
            </value>
            <value>
                <fullName>Réputation</fullName>
            </value>
            <value>
                <fullName>Réseaux sociaux</fullName>
            </value>
            <value>
                <fullName>Réunion d&apos;information France</fullName>
            </value>
            <value>
                <fullName>Réunion d&apos;information Internationale</fullName>
            </value>
            <value>
                <fullName>Salon virtuel</fullName>
            </value>
            <value>
                <fullName>Score test</fullName>
            </value>
            <value>
                <fullName>Site concours grandes ecoles</fullName>
            </value>
            <value>
                <fullName>Site web</fullName>
            </value>
            <value>
                <fullName>Téléphone</fullName>
            </value>
            <value>
                <fullName>Training Day (BBA)</fullName>
            </value>
            <value>
                <fullName>Visite</fullName>
            </value>
            <value>
                <fullName>Web to lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>