force-app/main/default/objects/Lead/fields/Recherche_de_formation_pour__c.field-meta.xml
<CustomField>
    <fullName>Recherche_de_formation_pour__c</fullName>
    <label>Recherche de formation pour</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Des collaborateurs</fullName>
            </value>
            <value>
                <fullName>Soi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>