force-app/main/default/objects/Lead/fields/Responsable_plan_formation__c.field-meta.xml
<CustomField>
    <fullName>Responsable_plan_formation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Responsable plan de formation</label>
    <type>Checkbox</type>
</CustomField>