force-app/main/default/objects/Lead/fields/Sales_Challenge__c.field-meta.xml
<CustomField>
    <fullName>Sales_Challenge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Challenge</label>
    <type>Checkbox</type>
</CustomField>