force-app/main/default/objects/Lead/fields/Souhait_campus__c.field-meta.xml
<CustomField>
    <fullName>Souhait_campus__c</fullName>
    <label>Souhait campus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Casablanca</fullName>
            </value>
            <value>
                <fullName>Lyon</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Paris</fullName>
            </value>
            <value>
                <fullName>Saint-Etienne</fullName>
            </value>
            <value>
                <fullName>Shanghai</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>