force-app/main/default/objects/Lead/fields/Souhait_Programme_pistes__c.field-meta.xml
<CustomField>
    <fullName>Souhait_Programme_pistes__c</fullName>
    <label>Souhait Programme</label>
    <length>150</length>
    <type>Text</type>
</CustomField>