force-app/main/default/objects/Lead/fields/Stade_d_clar_de_la_d_marche__c.field-meta.xml
<CustomField>
    <fullName>Stade_d_clar_de_la_d_marche__c</fullName>
    <label>Stade déclaré de la démarche</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Réflexion en cours</fullName>
            </value>
            <value>
                <fullName>Recherche d&apos;informations</fullName>
            </value>
            <value>
                <fullName>Choix presque finalisé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>