force-app/main/default/objects/Lead/fields/Startup_Domaine__c.field-meta.xml
<CustomField>
    <fullName>Startup_Domaine__c</fullName>
    <label>Startup Domaine</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Foodtech</fullName>
            </value>
            <value>
                <fullName>Fintech</fullName>
            </value>
            <value>
                <fullName>Sportech</fullName>
            </value>
            <value>
                <fullName>Edtech</fullName>
            </value>
            <value>
                <fullName>Hrtech</fullName>
            </value>
            <value>
                <fullName>Legaltech</fullName>
            </value>
            <value>
                <fullName>Cyber security</fullName>
            </value>
            <value>
                <fullName>Biotech</fullName>
            </value>
            <value>
                <fullName>Healthtech</fullName>
            </value>
            <value>
                <fullName>Beauty - Wellness</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>Retailtech</fullName>
            </value>
            <value>
                <fullName>Fashiontech</fullName>
            </value>
            <value>
                <fullName>Smart City</fullName>
            </value>
            <value>
                <fullName>CivicTech</fullName>
            </value>
            <value>
                <fullName>Traveltech</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Batîment</fullName>
            </value>
            <value>
                <fullName>Industrie 4.0</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>