force-app/main/default/objects/Lead/fields/TECH_EMPLOYABILITE_Exercice_en_cours__c.field-meta.xml
<CustomField>
    <fullName>TECH_EMPLOYABILITE_Exercice_en_cours__c</fullName>
    <defaultValue>TEXT(2015)</defaultValue>
    <label>TECH_EMPLOYABILITE_Exercice en cours</label>
    <length>4</length>
    <type>Text</type>
</CustomField>