force-app/main/default/objects/Lead/fields/TECH_pays_Pardot__c.field-meta.xml
<CustomField>
    <fullName>TECH_pays_Pardot__c</fullName>
    <description>Permet de récupérer la valeur Pardot pour remplir par flux le champ lookup Pays</description>
    <label>TECH_pays_Pardot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AFGHANISTAN</fullName>
            </value>
            <value>
                <fullName>AFRIQUE DU SUD</fullName>
            </value>
            <value>
                <fullName>ALBANIE</fullName>
            </value>
            <value>
                <fullName>ALGÉRIE</fullName>
            </value>
            <value>
                <fullName>ALLEMAGNE</fullName>
            </value>
            <value>
                <fullName>ANDORRE</fullName>
            </value>
            <value>
                <fullName>ANGOLA</fullName>
            </value>
            <value>
                <fullName>ANTIGUA-ET-BARBUDA</fullName>
            </value>
            <value>
                <fullName>ARABIE SAOUDITE</fullName>
            </value>
            <value>
                <fullName>ARGENTINE</fullName>
            </value>
            <value>
                <fullName>ARMÉNIE</fullName>
            </value>
            <value>
                <fullName>AUSTRALIE</fullName>
            </value>
            <value>
                <fullName>AUTRICHE</fullName>
            </value>
            <value>
                <fullName>AZERBAÏDJAN</fullName>
            </value>
            <value>
                <fullName>BAHAMAS</fullName>
            </value>
            <value>
                <fullName>BAHREÏN</fullName>
            </value>
            <value>
                <fullName>BANGLADESH</fullName>
            </value>
            <value>
                <fullName>BARBADE</fullName>
            </value>
            <value>
                <fullName>BÉLARUS / (Biélorussie)</fullName>
            </value>
            <value>
                <fullName>BELGIQUE</fullName>
            </value>
            <value>
                <fullName>BELIZE</fullName>
            </value>
            <value>
                <fullName>BÉNIN</fullName>
            </value>
            <value>
                <fullName>BHOUTAN</fullName>
            </value>
            <value>
                <fullName>BOLIVIE</fullName>
            </value>
            <value>
                <fullName>BOSNIE-HERZÉGOVINE</fullName>
            </value>
            <value>
                <fullName>BOTSWANA</fullName>
            </value>
            <value>
                <fullName>BRÉSIL</fullName>
            </value>
            <value>
                <fullName>BRUNÉI DARUSSALAM / (Brunei)</fullName>
            </value>
            <value>
                <fullName>BULGARIE</fullName>
            </value>
            <value>
                <fullName>BURKINA FASO / (Burkina)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>