force-app/main/default/objects/Lead/fields/TECH_Soutien_entreprise__c.field-meta.xml
<CustomField>
    <fullName>TECH_Soutien_entreprise__c</fullName>
    <label>Soutien entreprise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>oui</fullName>
            </value>
            <value>
                <fullName>non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>