force-app/main/default/objects/Lead/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <inlineHelpText>Thématique de campagne destinée à segmenter les pistes</inlineHelpText>
    <label>Thème</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Achats</fullName>
            </value>
            <value>
                <fullName>Coaching</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Conduite du changement</fullName>
            </value>
            <value>
                <fullName>Développement personnel</fullName>
            </value>
            <value>
                <fullName>Entrepreneuriat/ Innovation</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Luxe</fullName>
            </value>
            <value>
                <fullName>Management et ressources humaines</fullName>
            </value>
            <value>
                <fullName>Management Général</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Programmes de leadership</fullName>
            </value>
            <value>
                <fullName>Programmes pour dirigeants</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Stratégie</fullName>
            </value>
            <value>
                <fullName>Transport / Logistique</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>