force-app/main/default/objects/Lead/fields/Tranche_de_r_mun_ration__c.field-meta.xml
<CustomField>
    <fullName>Tranche_de_r_mun_ration__c</fullName>
    <label>Tranche de rémunération</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 50k€</fullName>
            </value>
            <value>
                <fullName>entre 50k€ et 60k€</fullName>
            </value>
            <value>
                <fullName>entre 60k€ et 70k€</fullName>
            </value>
            <value>
                <fullName>entre 70k€ et 80k€</fullName>
            </value>
            <value>
                <fullName>entre 80k€ et 90k€</fullName>
            </value>
            <value>
                <fullName>entre 90k€ et 100k€</fullName>
            </value>
            <value>
                <fullName>entre 100k€ et 110k€</fullName>
            </value>
            <value>
                <fullName>entre 110k€ et 120k€</fullName>
            </value>
            <value>
                <fullName>entre 120k€ et 130k€</fullName>
            </value>
            <value>
                <fullName>entre 130k€ et 140k€</fullName>
            </value>
            <value>
                <fullName>entre 140k€ et 150k€</fullName>
            </value>
            <value>
                <fullName>&gt; 150k€</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>