force-app/main/default/objects/Lead/fields/Vocation_Days_2021__c.field-meta.xml
<CustomField>
    <fullName>Vocation_Days_2021__c</fullName>
    <label>Vocation Days 2021</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Finance</fullName>
            </value>
            <value>
                <fullName>Marketing &amp; Digital Marketing</fullName>
            </value>
            <value>
                <fullName>Careers Abroad</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Sport</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Impact</fullName>
            </value>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Transition Énergétique</fullName>
            </value>
            <value>
                <fullName>Supply Chain &amp; Purchasing</fullName>
            </value>
            <value>
                <fullName>Santé/Pharma</fullName>
            </value>
            <value>
                <fullName>Cybersecurity</fullName>
            </value>
            <value>
                <fullName>Data &amp; Digital Marketing</fullName>
            </value>
            <value>
                <fullName>Transformation Digitale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>