force-app/main/default/objects/Lead/fields/Vocation_Days__c.field-meta.xml
<CustomField>
    <fullName>Vocation_Days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vocation Days</label>
    <type>Checkbox</type>
</CustomField>