force-app/main/default/objects/Lead/fields/Vocation_Days_Careers_Abroad__c.field-meta.xml
<CustomField>
    <fullName>Vocation_Days_Careers_Abroad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vocation Days Careers Abroad</label>
    <type>Checkbox</type>
</CustomField>