force-app/main/default/objects/Lead/fields/Vocation_Days_Corporate_Finance__c.field-meta.xml
<CustomField>
    <fullName>Vocation_Days_Corporate_Finance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vocation Days Corporate Finance</label>
    <type>Checkbox</type>
</CustomField>