force-app/main/default/objects/Lead/fields/Vocation_Days_Cybersecurity__c.field-meta.xml
<CustomField>
    <fullName>Vocation_Days_Cybersecurity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vocation Days Cybersecurity</label>
    <type>Checkbox</type>
</CustomField>