force-app/main/default/objects/Lead/fields/Vocation_Days_Data_Digital_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Vocation_Days_Data_Digital_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vocation Days Data &amp; Digital Marketing</label>
    <type>Checkbox</type>
</CustomField>