force-app/main/default/objects/Lead/fields/Vocation_Days_Marketing_Digital_Market__c.field-meta.xml
<CustomField>
    <fullName>Vocation_Days_Marketing_Digital_Market__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing &amp; Digital Marketing days</label>
    <type>Checkbox</type>
</CustomField>