force-app/main/default/objects/Lead/fields/Vocation_Days_Retail__c.field-meta.xml
<CustomField>
    <fullName>Vocation_Days_Retail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vocation Days Retail</label>
    <type>Checkbox</type>
</CustomField>