force-app/main/default/objects/Lead/fields/Vocation_Days_Sant_Pharma__c.field-meta.xml
<CustomField>
    <fullName>Vocation_Days_Sant_Pharma__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vocation Days Santé/Pharma</label>
    <type>Checkbox</type>
</CustomField>