force-app/main/default/objects/Lead/fields/Vocation_Days_Supply_Chain_Purchasing__c.field-meta.xml
<CustomField>
    <fullName>Vocation_Days_Supply_Chain_Purchasing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vocation Days Supply Chain &amp; Purchasing</label>
    <type>Checkbox</type>
</CustomField>