force-app/main/default/objects/Lead/fields/Vocation_Days_Transformation_Digitale__c.field-meta.xml
<CustomField>
    <fullName>Vocation_Days_Transformation_Digitale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vocation Days Transformation Digitale</label>
    <type>Checkbox</type>
</CustomField>