force-app/main/default/objects/Lead/fields/Vocation_Days_Transition_nerg_tique__c.field-meta.xml
<CustomField>
    <fullName>Vocation_Days_Transition_nerg_tique__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vocation Days Transition Énergétique</label>
    <type>Checkbox</type>
</CustomField>