force-app/main/default/objects/Lead/recordTypes/Formation_courte.recordType-meta.xml
<RecordType>
    <fullName>Formation_courte</fullName>
    <active>true</active>
    <businessProcess>Formation initiale</businessProcess>
    <label>Formation courte</label>
</RecordType>