force-app/main/default/objects/Lead/recordTypes/Partenariat_Fundraising.recordType-meta.xml
<RecordType>
    <fullName>Partenariat_Fundraising</fullName>
    <active>true</active>
    <businessProcess>Sur Mesure</businessProcess>
    <label>Partenariat Fundraising</label>
</RecordType>